Work in progress for v2

--- a/posts/post011_always_use_promise_all/post.mdx
+++ b/posts/post011_always_use_promise_all/post.mdx
@@ -12,8 +12,8 @@ seoKeywords:
    - error handling
    - nodejs
    - best practices
-coverSmall: "/imgs/posts/post011/cover-small.png"
-coverLarge: "/imgs/posts/post011/cover-large.png"
+thumbnail: "/imgs/posts/post011/cover-small.png"
+cover: "/imgs/posts/post011/cover-large.png"
 ---
 At my job one of our services was crashing from time to time, but quite rarely.
 Because it crashed only at a large interval of a few days it was not given that
