--- a/posts/post012_creating_an_application_for_my_wedding_invitations_part2/post.mdx
+++ b/posts/post012_creating_an_application_for_my_wedding_invitations_part2/post.mdx
@@ -18,8 +18,8 @@ seoKeywords:
    - deployment
    - VPS hosting
    - DevOps
-coverSmall: "/imgs/posts/post012/cover-small.png"
-coverLarge: "/imgs/posts/post012/cover-large.png"
+thumbnail: "/imgs/posts/post012/cover-small.png"
+cover: "/imgs/posts/post012/cover-large.png"
 ---
 And it's done and up-and-running. I finally launched my wedding invitations
 website where my guests will be able to confirm if they are coming or not, but
