--- a/posts/post013_creating_a_simple_popup_chatbot_using_openai/post.mdx
+++ b/posts/post013_creating_a_simple_popup_chatbot_using_openai/post.mdx
@@ -9,8 +9,8 @@ tags:
    - TTS
    - STT
    - Tutorial
-coverSmall: "/imgs/posts/post013/cover-small.png"
-coverLarge: "/imgs/posts/post013/cover-small.png"
+thumbnail: "/imgs/posts/post013/cover-small.png"
+cover: "/imgs/posts/post013/cover-small.png"
 invisibleTags:
    - LongPost
 publishedOn: "2024-05-21T12:25:43.054Z"
