--- a/projects/alexprisacariu-dev/project.mdx
+++ b/projects/alexprisacariu-dev/project.mdx
@@ -1,23 +1,38 @@
 ---
 title: "alexprisacariu.dev"
-coverShortProjectImage: "/imgs/projects/006_alexprisacariu.dev/cover.jpg"
-coverProjectImage: "/imgs/projects/006_alexprisacariu.dev/image1.png"
+thumbnail:
+  png: "/imgs/projects/006_alexprisacariu.dev/thumbnail.png"
+  webp: "/imgs/projects/006_alexprisacariu.dev/thumbnail.webp"
+cover:
+  png: "/imgs/projects/006_alexprisacariu.dev/cover.png"
+  webp: "/imgs/projects/006_alexprisacariu.dev/cover.webp"
 tags:
   - NextJS
   - GitHub
 description: "My personal website"
-pinned: 1
+pinned: 7
 url: "https://alexprisacariu.dev"
 otherImages:
-  - "/imgs/projects/006_alexprisacariu.dev/image1.png"
-  - "/imgs/projects/006_alexprisacariu.dev/image2.png"
-  - "/imgs/projects/006_alexprisacariu.dev/image3.png"
-  - "/imgs/projects/006_alexprisacariu.dev/image4.png"
+  - png: "/imgs/projects/006_alexprisacariu.dev/image1.png"
+    webp: "/imgs/projects/006_alexprisacariu.dev/image1.webp"
+  - png: "/imgs/projects/006_alexprisacariu.dev/image2.png"
+    webp: "/imgs/projects/006_alexprisacariu.dev/image2.webp"
+  - png: "/imgs/projects/006_alexprisacariu.dev/image3.png"
+    webp: "/imgs/projects/006_alexprisacariu.dev/image3.webp"
 yearsActive: [2021, "present"]
 techStack:
   - NextJS
   - TailwindCSS
   - GitHub
 myInvolvement: "Created all by myself"
+linkedPosts:
+  - "post014_alexprisacariu_v2"
 ---
-Developed using NextJS and hosted on GitHub.
+
+The site you are currently on.
+
+This is the second version of the site where I was focused into creating a
+better design and a better user experience.
+
+You can see in the blog post below more details about the changes I made. 
+
