--- a/projects/and-wedding-invitations/project.mdx
+++ b/projects/and-wedding-invitations/project.mdx
@@ -1,12 +1,12 @@
 ---
 title: "and-wedding-invitations"
-coverShortProjectImage: "/imgs/projects/005_and-wedding-invitations/cover.jpg"
-coverProjectImage: "/imgs/projects/005_and-wedding-invitations/image1.jpeg"
+thumbnail: "/imgs/projects/005_and-wedding-invitations/cover.jpg"
+cover: "/imgs/projects/005_and-wedding-invitations/image1.jpeg"
 tags:
   - Go
   - SolidJS
 description: "Application for the guests to my wedding to confirm the participation and to select options"
-pinned: 1
+pinned: 3
 url: ""
 otherImages:
   - "/imgs/projects/005_and-wedding-invitations/image1.jpeg"
@@ -19,6 +19,10 @@ linkedPosts:
 useCoverImage: 1
 urlPart: and-wedding-invitations
 yearsActive: [2024, 2024]
+techStack:
+  - Go
+  - SolidJS
+myInvolvement: "Created all by myself"
 ---
 A small website written in Go and SolidJS for my wedding where my invited
 guests could confirm if they would come or not and also inform us if they would
