--- a/projects/laikado-es/project.mdx
+++ b/projects/laikado-es/project.mdx
@@ -1,11 +1,11 @@
 ---
 title: "laikado.es"
-coverShortProjectImage: "/imgs/projects/004_laikado.es/cover.jpg"
-coverProjectImage: "/imgs/projects/004_laikado.es/image1.jpeg"
+thumbnail: "/imgs/projects/004_laikado.es/cover.jpg"
+cover: "/imgs/projects/004_laikado.es/image1.jpeg"
 tags:
   - NodeJS
 description: "Real estate ad vehicles aggregator portal"
-pinned: 1
+pinned: 6
 url: "https://www.laikado.es"
 otherImages:
   - "/imgs/projects/004_laikado.es/image1.jpeg"
@@ -18,6 +18,10 @@ otherImages:
   - "/imgs/projects/004_laikado.es/image8.jpeg"
 urlPart: laikado-es
 yearsActive: [2022, 2024]
+techStack:
+  - NodeJS
+  - JavaScript
+myInvolvement: ""
 ---
 An aggregator portal for real estate and vehicles ads created while working
 at Rubrikk. My part of the project was primaly concentrated on the front-end
