--- a/projects/panoro-ro/project.mdx
+++ b/projects/panoro-ro/project.mdx
@@ -1,12 +1,12 @@
 ---
 title: "panoro.ro"
-coverShortProjectImage: "/imgs/projects/panoro.ro/cover.jpg"
-coverProjectImage: "/imgs/projects/panoro.ro/image1.jpeg"
+thumbnail: "/imgs/projects/panoro.ro/cover.jpg"
+cover: "/imgs/projects/panoro.ro/image1.jpeg"
 tags:
   - NodeJS
   - ReactJS
 description: "Real estate website optimized for speed and Googlebot"
-pinned: 1
+pinned: 4
 url: "https://panoro.ro"
 otherImages:
   - src: "/imgs/projects/panoro.ro/image1.jpeg"
@@ -19,6 +19,10 @@ otherImages:
   - "/imgs/projects/panoro.ro/image7.jpeg"
 urlPart: panoro-ro
 yearsActive: [2020, 2022]
+techStack:
+  - NodeJS
+  - ReactJS
+myInvolvement: "Implemented the website"
 ---
 A real estate aggregator portal that was the first one to have 360 tours of
 real estates in Romania. The portal featured a dashboard where users and
@@ -30,6 +34,7 @@ that can export a standalone link with only the tour.
 
 - front-end in Next.js with very high score on Google's Lighthouse;
 - back-end in Node.js;
-- featured a complete 360 tours editor created using
-  <a href="https://github.com/google/marzipano" target="_blank" rel="noreferrer noopener">Google's Marzipano</a>;
+- featured a [complete 360 tours editor](/projects/panorovr-editor) created
+  using
+  <a href="https://github.com/google/marzipano" target="_blank" rel="noopener">Google's Marzipano</a>;
 - dashboard where users could add ads to portal;
