--- a/projects/panorocrm/project.mdx
+++ b/projects/panorocrm/project.mdx
@@ -1,13 +1,13 @@
 ---
 title: "PanoroCRM"
-coverShortProjectImage: "/imgs/projects/panorocrm/cover.jpg"
-coverProjectImage: "/imgs/projects/panorocrm/image1.jpeg"
+thumbnail: "/imgs/projects/panorocrm/cover.jpg"
+cover: "/imgs/projects/panorocrm/image1.jpeg"
 tags:
   - NodeJS
   - ReactJS
   - C++
 description: "Real estate website optimized for speed and Googlebot"
-pinned: 1
+pinned: 5
 url: "https://beta.crm.panoro.ro"
 otherImages:
   - "/imgs/projects/panorocrm/image1.jpeg"
@@ -21,6 +21,11 @@ otherImages:
   - "/imgs/projects/panorocrm/image8.jpeg"
   - "/imgs/projects/panorocrm/image9.jpeg"
 yearsActive: [2017, 2022]
+techStack:
+  - NodeJS
+  - ReactJS
+  - C++
+myInvolvement: ""
 ---
 PanoroCRM is a complex modular CRM with multiple modules for managing real
 estate offers, publish them to different real estate portals, create custom
