--- a/projects/airportlabs-communityapp/project.mdx
+++ b/projects/airportlabs-communityapp/project.mdx
@@ -1,9 +1,9 @@
 ---
 title: "CommunityApp"
-coverShortProjectImage:
+thumbnail:
   png: "/imgs/projects/airportlabs-communityapp/thumbnail.png"
   webp: "/imgs/projects/airportlabs-communityapp/thumbnail.webp"
-coverProjectImage:
+cover:
   png: "/imgs/projects/airportlabs-communityapp/cover.png"
   webp: "/imgs/projects/airportlabs-communityapp/cover.webp"
 tags:
@@ -33,7 +33,11 @@ techStack:
   - Laravel
   - React
   - Meteor
-myInvolvement: "Contributing to main development of the app, while primary contributing to the transition from multi-tenant to single-tenant architecture and integrating a plugins system."
+myInvolvement: >
+  Contributing to main development of the app, while primarily contributing to
+  the transition from multi-tenant modular monolith architecture to partitioned
+  multi-tenancy hub-and-spoke modular monolith architecture and integrating a
+  plugins system.
 ---
 
 The Airport Community App (ACA) is the mobile hub for airport teams, designed to
@@ -55,3 +59,15 @@ asset location, and performance metrics directly in their pockets, the Airport
 Community App empowers users to make rapid, informed decisions, thereby enhancing
 collective operational efficiency and fostering a collaborative, data-sharing
 culture across the entire airport campus.
+
+I'm part of the core team of the Community App, team that is responsible for
+maintaining the app and improving the core features, while a separate team is
+responsible for adding new features.
+
+Beside being part of the core team of the Community App I'm also responsible for
+two big projects:
+
+1. Transitioning the app from multi-tenant modular monolith architecture to
+  partitioned multi-tenancy hub-and-spoke modular monolith architecture;
+2. Integrating a plugins system where the features are developed as separated
+  apps and integrated as plugins inside the Community App.
